output.txt
error[E0603]: module `quotes` is private
 --> tests/quotes_tests.rs:3:16
  |
3 | use getquotes::quotes::{get_author_sections, fetch_quotes};
  |                ^^^^^^ private module
  |
note: the module `quotes` is defined here
 --> /home/muntasir/getquotes/src/lib.rs:5:1
  |
5 | mod quotes;
  | ^^^^^^^^^^

error[E0603]: module `mock` is private
   --> tests/quotes_tests.rs:4:14
    |
4   | use mockito::mock;
    |              ^^^^ private module
    |
note: the module `mock` is defined here
   --> /home/muntasir/.cargo/registry/src/index.crates.io-6f17d22bba15001f/mockito-1.6.1/src/lib.rs:742:1
    |
742 | mod mock;
    | ^^^^^^^^

error[E0603]: module `cache` is private
 --> tests/cache_tests.rs:3:16
  |
3 | use getquotes::cache::{init_cache, get_cached_quotes};
  |                ^^^^^ private module
  |
note: the module `cache` is defined here
 --> /home/muntasir/getquotes/src/lib.rs:2:1
  |
2 | mod cache;
  | ^^^^^^^^^

error[E0603]: module `config` is private
 --> tests/config_tests.rs:3:16
  |
3 | use getquotes::config::{default_authors, load_or_create_config, parse_hex_color, Config};
  |                ^^^^^^ private module
  |
note: the module `config` is defined here
 --> /home/muntasir/getquotes/src/lib.rs:3:1
  |
3 | mod config;
  | ^^^^^^^^^^

error[E0603]: module `logger` is private
 --> tests/logger_tests.rs:3:16
  |
3 | use getquotes::logger::initialize_logger;
  |                ^^^^^^ private module
  |
note: the module `logger` is defined here
 --> /home/muntasir/getquotes/src/lib.rs:4:1
  |
4 | mod logger;
  | ^^^^^^^^^^

warning: unused import: `std::fs`
 --> tests/config_tests.rs:4:5
  |
4 | use std::fs;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> tests/integration_tests.rs:20:18
   |
20 |     let result = run(args).await;
   |                  ^^^------ argument #2 of type `Arc<reqwest::async_impl::client::Client>` is missing
   |
note: function defined here
  --> /home/muntasir/getquotes/src/lib.rs:41:14
   |
41 | pub async fn run(args: Args, client: Arc<Client>) -> Result<(), Box<dyn StdError + Send + Sync>> {
   |              ^^^
help: provide the argument
   |
20 |     let result = run(args, /* Arc<reqwest::async_impl::client::Client> */).await;
   |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

For more information about this error, try `rustc --explain E0603`.
For more information about this error, try `rustc --explain E0061`.
error: could not compile `getquotes` (test "cache_tests") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: `getquotes` (test "config_tests") generated 1 warning
error: could not compile `getquotes` (test "config_tests") due to 1 previous error; 1 warning emitted
error: could not compile `getquotes` (test "quotes_tests") due to 2 previous errors
error: could not compile `getquotes` (test "logger_tests") due to 1 previous error
error: could not compile `getquotes` (test "integration_tests") due to 1 previous error
warning: `getquotes` (bin "getquotes") generated 5 warnings (5 duplicates)
error: command `/home/muntasir/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics` exited with code 101
